# quicknote-android

./: README.md  build.gradle  gradlew  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/www/: app.js  index.html  manifest.json  style.css
app/src/main/java/com/quicknote/app/: MainActivity.java  RecordingService.java  TranscriptionService.java  WhisperBridge.kt  WhisperCpp.kt
app/src/main/jni/: CMakeLists.txt  jni.c
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_provider_paths.xml
